log
g++ main.cpp -o particle.out -g -std=c++11 -lsfml-graphics -lsfml-window -lsfml-system
main.cpp: In function ‘int main()’:
main.cpp:125:42: error: conversion from ‘Enemy*’ to non-scalar type ‘Enemy’ requested
       Enemy tempEnemy = new Enemy(100, 10);
                                          ^
main.cpp:126:34: error: no matching function for call to ‘std::vector<Enemy*>::push_back(Enemy&)’
       enemies.push_back(tempEnemy);
                                  ^
main.cpp:126:34: note: candidates are:
In file included from /usr/include/c++/4.9/vector:64:0,
                 from /usr/include/c++/4.9/bits/random.h:34,
                 from /usr/include/c++/4.9/random:49,
                 from /usr/include/c++/4.9/bits/stl_algo.h:66,
                 from /usr/include/c++/4.9/algorithm:62,
                 from /usr/include/SFML/System/Utf.hpp:32,
                 from /usr/include/SFML/System.hpp:43,
                 from /usr/include/SFML/Window.hpp:32,
                 from /usr/include/SFML/Graphics.hpp:32,
                 from main.cpp:1:
/usr/include/c++/4.9/bits/stl_vector.h:913:7: note: void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = Enemy*; _Alloc = std::allocator<Enemy*>; std::vector<_Tp, _Alloc>::value_type = Enemy*]
       push_back(const value_type& __x)
       ^
/usr/include/c++/4.9/bits/stl_vector.h:913:7: note:   no known conversion for argument 1 from ‘Enemy’ to ‘Enemy* const&’
/usr/include/c++/4.9/bits/stl_vector.h:931:7: note: void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = Enemy*; _Alloc = std::allocator<Enemy*>; std::vector<_Tp, _Alloc>::value_type = Enemy*]
       push_back(value_type&& __x)
       ^
/usr/include/c++/4.9/bits/stl_vector.h:931:7: note:   no known conversion for argument 1 from ‘Enemy’ to ‘Enemy*&&’
main.cpp:128:42: error: invalid use of member function (did you forget the ‘()’ ?)
     for (unsigned int i = 0; i < enemies.size; i++) {
                                          ^
Makefile:7: recipe for target 'all' failed
make: *** [all] Error 1
